# Games

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb
CardDeck/: TrainVisionModel.ipynb  TrainVisionModel.py  multicard_detection.ipynb
Tutorials/: LoadingModel.ipynb  TrainVisionModel.ipynb  util.py
YOLO/: README.md  create_dataset.ipynb  create_dataset.py  create_dataset_v2.py  create_dataset_v3.py  detect_livestream.ipynb  train.ipynb  util.py
data/: README.md  game_state.json
data/bicycle_cards/: README.md  test.txt
data/playing_cards/: README.md
deckAPI/: cli.py  game_state.json
skullking/: cards.py  game.py  player.py  test.ipynb  test.py  util.py
sparkle/: test.ipynb  test.py  util.py
src/CardDeck/: TrainVisionModel.py  util.py
src/Tutorials/: README.md  TrainVisionModel.ipynb
src/YOLO/: create_dataset.ipynb  train.ipynb  util.py
src/data/: README.md
src/deckAPI/: game_state.json  main.py
src/games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/skullking/: game.py  player.py  test.ipynb  testScript.py  test_ notebook.ipynb  wizard.py
src/sparkle/: test.py
src/the_great_dalmuti/: play.py
tests/skullking/: test_game.py  test_player.py
tests/the_great_dalmuti/: test_player.py
the_great_dalmuti/: cards.py  game.py  game_state.py  input_util.py  play.py  player.py  test.ipynb
